src/test/ui/error-codes/E0276.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/E0276.rs:6:5
   |
LL |     fn foo<T>(x: T);
   |     ---------------- definition of `foo` from trait
...
LL |     fn foo<T>(x: T) where T: Copy {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `T: std::marker::Copy`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0276`.
